# stable-eur-coin

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE.md  README.md  biome.jsonc  package-lock.json  package.json  tsconfig.json
client/: client.ts  deploy.ts
client/helpers/: lib.ts
programs/anrx-eur-coin/: Cargo.toml
programs/anrx-eur-coin/src/: instructions.rs  lib.rs  utils.rs
programs/anrx_exchange_client/: Cargo.toml
programs/anrx_exchange_client/src/: lib.rs
programs/anrx_exchange_rate/: Cargo.toml
programs/anrx_exchange_rate/src/: lib.rs
tests/: anrx_eur_coin.ts  anrx_exchange_rate.ts
tests/src/: anrx_eur_coin.rs
