[package]
name = "anrx-eur-coin"
version = "3.0.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anrx_eur_coin"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []


[dependencies]
anchor-lang = {version="0.30.1",features = ["init-if-needed"], default-features = false }
anchor-spl = { version = "0.30.1", features = ["metadata"] }
mpl-token-metadata = { version = "3.2.3" }
spl-token = "4.0.0"
num_enum="0.7.2"
solana-program = "1.18.26"
pyth-solana-receiver-sdk = "0.3.2"
anrx_exchange_rate = { path = "../anrx_exchange_rate", features = ["cpi"] }
spl-tlv-account-resolution = "0.6.3"
spl-transfer-hook-interface = "0.6.3"
spl-type-length-value = "0.4.3"
spl-pod = "0.2.2"

