[package]
name = "anrx_exchange_client"
version = "1.0.0"
edition = "2021"

[dependencies]
anchor-lang = "0.30.1"
solana-program = "1.18.26"   # Match your existing version
pyth-sdk-solana = "0.9.0"    # Upgrade to match solana-program
pyth-sdk = "0.8.0"
solana-client = "1.18.26"
solana-sdk = "1.18.26"




